samples/_failures_safe/1761289572_3dc457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac8b6d62.c: In function ‘main’:
./samples/SAFE/__tmp_ac8b6d62.c:178:12: error: missing terminating " character
  178 |     printf("0: START, 1: DATA, 2: PROCESS, 3: SUCCESS, 4: FAILURE,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ac8b6d62.c:178:5: error: expected expression at end of input
  178 |     printf("0: START, 1: DATA, 2: PROCESS, 3: SUCCESS, 4: FAILURE,
      |     ^~~~~~
./samples/SAFE/__tmp_ac8b6d62.c:178:5: error: expected declaration or statement at end of input
